<resources>
    <string name="app_name">Laundry</string>
    <string name="card_pelanggan_id">ID Pelanggan</string>
    <string name="card_pelanggan_nama">Nama Pelanggan</string>
    <string name="card_pelanggan_alamat">Alamat</string>
    <string name="card_pelanggan_nohp">No Hp</string>
    <string name="card_pelanggan_hubungi">Hubungi</string>
    <string name="card_pelanggan_lihat">Lihat</string>
    <string name="card_pegawai_id">ID Pegawai</string>
    <string name="card_pegawai_nama">Nama Pegawai</string>
    <string name="card_pegawai_alamat">Alamat</string>
    <string name="card_pegawai_Nohp">No Hp</string>
    <string name="card_pegawai_terdaftar">Terdaftar</string>
    <string name="card_pegawai_cabang">Cabang</string>
    <string name="card_pegawai_hubungi">Hubungi</string>
    <string name="card_pegawai_Lihat">Lihat</string>
    <string name="activity_tambah_pelangganjudul">TAMBAH PELANGGAN</string>
    <string name="activity_tambah_pelangganNL">Nama Lengkap</string>
    <string name="activity_tambah_pelangganTHnl">Masukkan Nama Lengkap</string>
    <string name="activity_tambah_pelangganAlamat">Alamat</string>
    <string name="activity_tambah_pelangganTHAlamat">Masukkan Alamat</string>
    <string name="activity_tambah_pelangganNoHp">No Hp Aktif</string>
    <string name="activity_tambah_pelangganTHNohp">Masukkan Nomor Hp</string>
    <string name="activity_tambah_pelangganbtsimpan">Simpan</string>
    <string name="activity_tambah_pegawaijudul">TAMBAH PEGAWAI</string>
    <string name="activity_tambah_pegawaiNL">Nama Lengkap</string>
    <string name="activity_tambah_pegawaiAlamat">Alamat</string>
    <string name="activity_tambah_pegawaiTHalamat">Masukkan Alamat</string>
    <string name="activity_tambah_pegawaiNoHp">No Hp Aktif</string>
    <string name="activity_tambah_pegawaiTHnohp">Masukkan Nomer HP</string>
    <string name="activity_tambah_pegawaiCabang">Cabang</string>
    <string name="activity_tambah_pegawaiTHcabang">Masukkan Cabang</string>
    <string name="activity_tambah_pegawaiTHnl">Masukkan Nama Lengkap</string>
    <string name="activity_tambah_pegawaisave">Simpan</string>
    <string name="activity_tambah_layananID">ID Layanan</string>
    <string name="activity_tambah_layananNama">Nama Layanan</string>
    <string name="activity_tambah_layananHarga">Harga</string>
    <string name="activity_tambah_layananNamaCabang">Nama Cabang</string>
    <string name="_nama_pelanggan">nama tidak boleh kosong</string>
    <string name="_alamat_pelanggan">alamat tidak boleh kosong</string>
    <string name="_noHp_pelanggan">no HP tidak boleh kosong</string>
    <string name="sukses_simpan_pelanggan">sukses menyimpan data pelanggan</string>
    <string name="gagal_simpan_pelanggan">gagal menyimpan data pelanggan</string>
    <string name="activity_tambah_layananjudul">Tambah Layanan</string>
    <string name="activity_tambah_layanannamalayanan">Nama Layanan</string>
    <string name="activity_tambah_layananetnamalayanan">Nama Layanan</string>
    <string name="activity_tambah_layanannamacabang">Nama Cabang</string>
    <string name="activity_tambah_layananetnamacabang">Nama Cabang</string>
    <string name="activity_tambah_layananharga">Harga</string>
    <string name="activity_tambah_layananetHarga">Harga</string>
    <string name="_cabang_layanan">cabang tidak boleh kosong</string>
    <string name="_Harga_layanan">mohon sertakan harga</string>
    <string name="sukses_simpan_layanan">sukses simpan layanan</string>
    <string name="gagal_simpan_layanan">gagal_simpan_layanan</string>
    <string name="tambahcabang">Tambah Cabang</string>
    <string name="namacabang">Nama Cabang</string>
    <string name="hargacabang">Harga Cabang</string>
    <string name="alamatcabang">Alamat Cabang</string>
    <string name="NoHpcabang">Nomor Hp</string>
    <string name="etcabanglayanan">Layanan</string>
    <string name="buttonSimpanlayanan">Simpan</string>
    <string name="idcabang">ID Cabang</string>
    <string name="tvNama_cabang">Nama Cabang</string>
    <string name="tvAlamat_cabang">Alamat</string>
    <string name="tvNoHp_Cabang">No HP</string>
    <string name="layanancabang">Layanan yang tersedia</string>
    <string name="_nama_cabang">Nama cabang tidak boleh kosong</string>
    <string name="_alamat_cabang">Alamat tidak boleh kosong</string>
    <string name="_noHp_cabang">No HP tidak boleh kosong</string>
    <string name="_layanan_cabang">Layanan tidak boleh kosong</string>
    <string name="sukses_simpan_cabang">Berhasil Menambahkan cabang</string>
    <string name="gagal_simpan_cabang">Gagal menambahkan cabang</string>
    <string name="activity_sunting_pelangganjudul">Sunting Pelanggan</string>
    <string name="activity_tambah_pelangganbtsunting">Sunting</string>
    <string name="activity_sunting_pegawaijudul">Sunting Pegawai</string>
    <string name="activity_tambah_pegawaisunting">Sunting</string>
    <string name="pegawai_tambah">Tambah Pegawai</string>
    <string name="nama_tambahan">Nama Tambahan</string>
    <string name="selamat_pagi">Selamat Pagi, Aisyah</string>
    <string name="greeting_morning">Selamat pagi, %1$s</string>
    <string name="greeting_afternoon">Selamat siang, %1$s</string>
    <string name="greeting_evening">Selamat sore, %1$s</string>
    <string name="greeting_night">Selamat malam, %1$s</string>
    <string name="estimasi">Estimasi hari ini</string>
    <string name="transaksi">Transaksi</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="laporan">Laporan</string>
    <string name="melayani">Siap melayani pelanggan dengan setulus hati</string>
    <string name="kecewa">Jangan Kecewakan Pelanggan</string>
    <string name="Akun">Akun</string>
    <string name="Layanan">Layanan</string>
    <string name="Tambahan">Tambahan</string>
    <string name="Pegawai">Pegawai</string>
    <string name="Cabang">Cabang</string>
    <string name="Printer">Printer</string>
    <string name="DataPelanggan">Data Pelanggan</string>
    <string name="NamaPelanggan">Nama Pelanggan</string>
    <string name="NoHP">No HP</string>
    <string name="PilihPelanggan">Pilih Pelanggan</string>
    <string name="LayananUtama">Layanan Utama</string>
    <string name="NamaLayanan">Nama Layanan</string>
    <string name="Harga">Harga</string>
    <string name="PilihLayanan">Pilih Layanan</string>
    <string name="LayananTambahan">Layanan Tambahan</string>
    <string name="Tambah">Tambah</string>
    <string name="Proses">Proses</string>
    <string name="KonfirmasiData">Konfirmasi Data</string>
    <string name="Nama">Nama</string>
    <string name="Batal">Batal</string>
    <string name="Pembayaran">Pembayaran</string>
    <string name="total_bayar">Total Bayar: %1$s</string>
    <string name="PilihMetodePembayaran">Pilih Metode Pembayaran</string>
    <string name="BayarNanti">Bayar Nanti</string>
    <string name="Tunai">Tunai</string>
    <string name="QRis">QRIS</string>
    <string name="IDTransaksi">ID Transaksi</string>
    <string name="Tanggal">Tanggal</string>
    <string name="Pesanan">Pesanan</string>
    <string name="Karyawan">Karyawan</string>
    <string name="RincianTambahan">Rincian Tambahan</string>
    <string name="subtotaltambahan">subtotal tambahan</string>
    <string name="totalbayar">total bayar</string>
    <string name="KirimWhatsApp">Kirim WhatsApp</string>
    <string name="Cetak">Cetak</string>
    <string name="Datalayanankosong">Data layanan kosong</string>
    <string name="Datapelanggankosong">Data pelanggan kosong</string>
    <string name="dptkosong">Data pelanggan kosong</string>
    <string name="cp">Cari pelanggan...</string>
    <string name="cl">Cari layanan...</string>
    <string name="ct">Cari tambahan...</string>
    <string name="idlayanan">id layanan</string>
    <string name="aksi_batal">Aksi dibatalkan</string>
    <string name="ltsdp">Layanan tambahan sudah dipilih</string>
    <string name="mpl">Mohon pilih layanan</string>
    <string name="mpnp">Mohon pilih nama pelanggan</string>
    <string name="label_terdaftar">Terdaftar: %1$s</string>
    <string name="btn_sunting">Sunting</string>
    <string name="btn_simpan_perubahan">Simpan Perubahan</string>
    <string name="toast_sukses_update_pegawai">Data berhasil diperbarui</string>
    <string name="toast_gagal_update_pegawai">Gagal memperbarui data</string>
</resources>