<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvDataPegawai"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="20dp"
    android:backgroundTint="@color/CardDasar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:backgroundTint="@color/CardPoni">

        <TextView
            android:id="@+id/idpegawai"
           android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/card_pegawai_id"
            android:paddingStart="10dp"
            android:gravity="center_vertical"/>
    </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lvCardDataPegawai"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp">


        <TextView
            android:id="@+id/tvNama_pegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/card_pegawai_nama"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/tvAlamat_pegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_alamat"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/tvNoHp_Pegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_Nohp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/tvterdaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_terdaftar"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/tvcabangpegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_cabang"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"/>



        <LinearLayout
            android:id="@+id/lhCardDataPegawai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btpegawaihub"
                android:layout_width="180dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:text="@string/card_pegawai_hubungi"

                android:textColor="@color/garisPament"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="10dp"

                android:backgroundTint="@color/buttoncard"
                android:layout_weight="1"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/btpegawailihat"
                android:layout_weight="1"
                android:layout_width="180dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"

                android:textColor="@color/garisPament"
                android:text="@string/card_pegawai_Lihat"
                android:backgroundTint="@color/buttoncard"
                android:layout_marginStart="2dp"/>

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>


