<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pegawai.TambahPegawai"
    android:background="#F3D0D7">

    <TextView
        android:id="@+id/tambahpegawai"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/activity_tambah_pegawaijudul"
        app:layout_constraintBottom_toTopOf="@id/namapegawai"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/namapegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/etnamapegawai"
        app:layout_constraintTop_toBottomOf="@id/tambahpegawai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/activity_tambah_pegawaiNL"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"/>
    <EditText
        android:id="@+id/etnamapegawai"
        app:layout_constraintTop_toBottomOf="@id/namapegawai"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingStart="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/activity_tambah_pegawaiTHnl"
        app:layout_constraintBottom_toTopOf="@id/alamat"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle" />
    <TextView
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etnamapegawai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/card_pegawai_alamat"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/etalamat"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>
    <EditText
        android:id="@+id/etalamat"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingStart="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/activity_tambah_pegawaiTHalamat"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/NoHp"
        android:background="@drawable/rectangle"
        app:layout_constraintTop_toBottomOf="@id/alamat"/>
    <TextView
        android:id="@+id/NoHp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/activity_tambah_pegawaiNoHp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@id/etNoHp"
        app:layout_constraintTop_toBottomOf="@id/etalamat"/>
    <EditText
        android:id="@+id/etNoHp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingStart="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toTopOf="@id/buttonSimpan"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/activity_tambah_pegawaiTHnohp"

        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        app:layout_constraintTop_toBottomOf="@id/NoHp"/>

    <EditText
        android:id="@+id/etcabang"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingStart="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/activity_tambah_pegawaiTHcabang"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cabang"
        app:layout_constraintBottom_toTopOf="@id/buttonSimpan"/>

    <TextView
        android:id="@+id/cabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_tambah_pegawaiCabang"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoHp"
        app:layout_constraintBottom_toTopOf="@id/etcabang"/>

    <Button
        android:id="@+id/buttonSimpan"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_tambah_pegawaisave"
        android:backgroundTint="@color/black"
        android:layout_marginBottom="180dp"
        app:layout_constraintTop_toBottomOf="@id/etcabang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>